--- a/templates/store/store.html
+++ b/templates/store/store.html
@@ -139,7 +139,7 @@
                            </div>
                            <!-- price-wrap.// -->
                         </div>
-                        <a href="#" class="btn btn-block btn-primary">Add to cart </a>
+                        <a href="{{ product.get_url }}" class="btn btn-block btn-primary">view details </a>
                      </figcaption>
                   </figure>
                </div>
