--- a/templates/store/cart.html
+++ b/templates/store/cart.html
@@ -8,6 +8,13 @@
     <div class="container">
     
     <!-- ============================ COMPONENT 1 ================================= -->
+
+    {% if not cart_items %}
+    <h2 class="text-center mb-3">your shopping cart is empty</h2>
+    <div class="text-center">
+        <a href="{% url 'store' %}" class="btn btn-primary">Continue shopping</a>
+    </div>
+    {% else %}
     
     <div class="row">
         <aside class="col-lg-9">
@@ -28,7 +35,7 @@
             <figure class="itemside align-items-center">
                 <div class="aside"><img src="{{ cart_item.product.images.url }}" class="img-sm"></div>
                 <figcaption class="info">
-                    <a href="#" class="title text-dark">Camera Canon EOS M50 Kit</a>
+                    <a href="{{ cart_item.product.get_url }}" class="title text-dark">{{ cart_item.product.product_name }}</a>
                     <p class="text-muted small">color: 25 Mpx <br> size: Canon</p>
                 </figcaption>
             </figure>
@@ -84,7 +91,7 @@
                     <img src="{% static './images/misc/payments.png' %}" height="26">
                 </p>
                 <a href="./place-order.html" class="btn btn-primary btn-block"> Checkout </a>
-                <a href="./store.html" class="btn btn-light btn-block">Continue Shopping</a>
+                <a href="{% url 'store' %}" class="btn btn-light btn-block">Continue Shopping</a>
             </div> <!-- card-body.// -->
             </div> <!-- card.// -->
     
@@ -93,6 +100,7 @@
     
     </div> <!-- row.// -->
     <!-- ============================ COMPONENT 1 END .// ================================= -->
+    {% endif %}
     
     </div> <!-- container .//  -->
     </section>
