--- a/templates/store/product_detail.html
+++ b/templates/store/product_detail.html
@@ -76,8 +76,15 @@
                         {% if single_product.stock <= 0  %}
                             <h5>out of stock<h5>
                         {% else %}
-                        <a href="{% url 'add_cart' single_product.id %}" class="btn  btn-primary"> <span class="text">Add to cart</span>
-                            <i class="fas fa-shopping-cart"></i> </a>
+                                {% if in_cart %}
+                                    <a href="" class="btn  btn-success"> <span class="text">Added to cart</span>
+                                      <i class="fas fa-check"></i> </a>
+                                      <a href="{% url 'cart' %}" class="btn  btn-outline-primary"> <span class="text">view cart</span>
+                                        <i class="fas fa-eye"></i> </a>
+                                {% else %}
+                                    <a href="{% url 'add_cart' single_product.id %}" class="btn  btn-primary"> <span class="text">Add to cart</span>
+                                      <i class="fas fa-shopping-cart"></i> </a>
+                            {% endif %}
                         {% endif %}
                     </article> <!-- product-info-aside .// -->
                 </main> <!-- col.// -->
